--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ body {
 }
 
 #hero-image {
-    background-color: gray;
+    background-color: rgb(128, 128, 128, .6);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -86,18 +86,108 @@ button {
     cursor: pointer;
 }
 
-/*TODO: rework corresponding HTML
- to be imgs with captions?*/
-
 #info-box  {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 24px;
+    margin-top: 48px;
+    margin-bottom: 48px;
+    padding: 0 15%;
 }
 
 .info-images {
     display: flex;
+    justify-content: space-around;
     align-items: center;
+}
+
+.info-images h1 {
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 900;
+}
+
+.info-images img {
+    min-height: 20vh;
+    min-width: 10vw;
+    border: 4px solid #3882f6;
+    border-radius: 20px;
+}
+
+.info-images figcaption {
+    max-width: 66%;
+    color: gray;
+    text-align: center;
+    margin-left: 17px;
+}
+
+ /* TODO: Sections 3 and 4, and the footer!
+ we're getting there :) */
+
+ #quote-box {
+    display: flex;
+    flex-direction: column;
+    background-color: #E5E7EB;
+    padding: 0 30%;
+ }
+
+ #quote-box p {
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 300;
+    color: #1F2937;
+    margin-bottom: 0;
+ }
+
+ #quote-attributor {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-end;
+    font-weight: 800;
+    margin-bottom: 48px;
+ }
+
+ #last-box-wrapper {
+    align-items: center;
+    background-color: white;
     padding: 0 15%;
+    margin: 48px;
+ }
+
+ #signup-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    border-radius: 8px;
+    background-color: #3882f6;
+    padding: 0 15%;
+    height: 100px;
+    color: white;
+ }
+
+#first-line {
+    font-weight: 800;
+}
+
+#signup-button {
+    margin-left: 48px;
+
+}
+#signup-button button {
+    border: 2px solid white;
+    border-radius: 8px;
+}
+
+footer {
+    background-color: #1F2937;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+footer p {
+    color: white;
+    align-items: center;
+    margin: 24px;
 }
